round image corners and fix alignment issues

--- a/style.css
+++ b/style.css
@@ -80,28 +80,33 @@ a {
     justify-content: center;
 }
 
+.content-header {
+    padding: 20px;
+}
+
 .img-layout {
     display: flex;
     justify-content: center;
 }
 
-.content-images {
+.img-content {
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
 .content-images {
     width: 150px;
     height: 150px;
     object-fit: cover;
-    padding: 0 20px;
+    border-radius: 10%;
+    border: 5px solid #3882F6;
 }
 
 p {
     width: 150px;
     padding: 0 20px;
 }
-
 
 .content-container {
     display: flex;
